Class.newInstance() => Class.getConstructor().newInstance()